# StreamInfer

./: .gitignore  .gitmodules  Makefile  readme.md  requirements.txt  setup.py  setup_env_carc.md
benchmark/: benchmark_serving.py  server.py  utils.py  workload.py
benchmark/ops/moe/: fp8.py  ggemm.py
benchmark/ops/moe/gemm-workspace/: .gitignore  CMakeLists.txt  build-carc.sh  build.sh  config.hpp  plot_results.py  profiler.cu
benchmark/ops/nccl-vs-nixl/: .gitignore  README.md  bench.py  bench_fanin.py  plot.py  plot_fanin.py  run.sh  run_fanin.sh  run_fanin_8node.sh
benchmark/ops/nixl-limitation/: build_shared_agent_mesh.sh  make_plots.py  parse_backend_traces.py  run_decisive_exp.sh  run_shared_agent_mesh.sh  shared_agent_mesh.cu  sweep_fix_modes.sh
benchmark/scripts/: asym_alloc_config.multihost.example.json  install_disagmoe_ubuntu2404.sh  launch_server.sh
csrc/: CMakeLists.txt  bindings.cpp
csrc/cuda_ops/: cuda_graph.cu  gather_and_sum.cu  grouped_gemm.cu  indices_copy_pad.cu  permute.cu  quantization.cu
csrc/debugger/: cycles.cpp  debugging.cpp
csrc/engine/: block_manager.cpp  engine.cpp  scheduler.cpp  transport_factory.cpp
csrc/include/: batch.hpp  binding_helper.h  block_manager.h  comm.h  constants.h  cuda_utils.h  cycles.h  datatypes.hpp  debugging.h  dispatcher.h  distributed.hpp  engine.h  gdr_context.hpp  grouped_gemm.h  layer.h  logging.h  metadata.hpp  muhelper.h  nixl_channel.h  nixl_context.h  pool.h  profiler.hpp  scheduler.h  tensor_utils.hpp  tests.h  transport_factory.h  ucxq.hpp  utils.hpp  vector_utils.hpp
csrc/muhelper/: comm.cpp  dispatcher.cpp  layer.cpp  muhelper.cpp  nixl_channel.cpp  nixl_context.cpp  pool.cpp  ucxq.cpp
datasets/: gsm8k_lengths.npy  process_sharegpt.py  sharegpt_lengths.npy
disagmoe/: config.py  env.py
disagmoe/block_manager/: block_manager.py  mem_pool.py
disagmoe/executor/: __init__.py  cuda_graph.py  executor.py
disagmoe/frontend/: adapter.py  controller.py  datatypes.py  engine.py  engine_utils.py  profiler.py  ray_helper.py  tokenizer.py
disagmoe/models/: attention.py  distributed.py  experts.py  gate.py  linear.py  utils.py
disagmoe/ops/: cuda_graph.py  grouped_gemm.py  memory.py  quantization.py
disagmoe/scheduler/: __init__.py  dpscheduler.py
disagmoe/utils/: advanced_logger.py  constants.py  gdr_context.py  logger.py  metrics.py  placement.py  tensor_utils.py  utils.py
docs/: advanced_logging.md  design_asymmetric_deployment.md  example-exp-instruction.txt  plot_styling.md  rules-for-experiments.md  sgpu-rules-for-agents.txt
experiments/: process_and_plot_advanced_logging.py
experiments/amoe-060/: intention.txt
experiments/evaluations/: congestion-experiment-guide.md  itl-tput-exp-plan-gptoss.txt  itl-tput-exp-plan.txt  itl-tput-sweep-guide.md  main-exp-exec-plan.md  main-exp-plan-gptoss.txt  main-exp-plan-qwen3.txt  parse_detokenizer_logs.py  unified-script-based-experiment-guide.txt
experiments/evaluations/delta/: unified-eval-mar28-1.txt
experiments/scripts/delta/: DEPLOY.md  NCCL.txt  README.txt  env.sh  launch_server_16gpu.sh  launch_server_local.sh
experiments/scripts/sphere-16-asym/: README.txt  REPORT.md  asym_expert_alloc_2to1_weights.json  asym_expert_alloc_equal_weights.json  run_experiments.sh  (+2 more)
experiments/sphere-16-ablation-apr1/: checklist.txt
experiments/sphere-16-congestion-mar31/: checklist.txt
experiments/sphere-16-investigate-glm/: checklist.txt  report.md  run_all.sh
experiments/sphere-16-nixl-perf/: run_perf_exp.sh
experiments/sphere-16-tput-itl-mar30/: checklist.txt
experiments/sphere-16-unified-eval-glm-apr1/: checklist.txt
experiments/sphere-16-unified-eval-glm-half/: checklist.txt
experiments/sphere-16-unified-eval-glm-mar28/: checklist.txt
experiments/sphere-16-unified-eval-glm-mar28-round2/: checklist.txt
interference_gen/: .gitignore  README.md  build_ucx.sh  interfere.py  plot_trace.py  profile_bw.py  run_interfere.sh  run_ring.sh  ucx_receiver.c  ucx_ring_node.c  ucx_sender.c
patches/: vllm_0.8.2.patch
simulation/: experiment.py  network_simulation.md  plot_itl_cdf.py  sim_async.py  sim_sync.py  sim_tbo.py  util.py
simulation/expert_costs_profiles/: GPT-OSS-120B_A100.csv  Qwen3-235B-A22B_A100.csv  Qwen3-30B-A3B_A100.csv  Qwen3-30B.csv
simulation/scripts/: plot_throughput_by_ep_group_size.py
simulator/: queueing.py
tests/cg/: test_attn.py  test_expert.py
tests/comm/: test_multi_launch.py  test_nccl_config.cpp  test_nccl_group.py  test_op_overlap.py  test_zmq.py
tests/cpp/: test  test_file.cpp  test_size.cpp  test_suc.cpp
tests/dp/: test_e2e.sh  test_placement.py  test_split.py
tests/engine/: test_attention.py  test_attn_engine.py  test_channel_info.py  test_controller.py  test_dispatcher.py  test_executor.py  test_exp_engine.py  test_sampler.py  test_scheduler.py  test_zmq.py
tests/ep/: test_colocate.py  test_e2e.py  test_ep.py  test_ep_rank.py  test_experts.py  test_multi_device.py  test_multi_layer.py
tests/meta/: test_metadata.py
tests/ops/: test_expert.py  test_grouped_gemm.py  test_mappings.py  test_memory.py
tests/other/: test_binding.py  test_dict.py  test_ray_attribute.py  test_ray_col.py  test_type.py
tests/place/: test_placement.py
tests/profiler/: makefile  trace.cpp
tests/tp/: test_attn_executor.py  test_attn_scheduler.py  test_cuda_graph.py  test_e2e.py  test_intra_tp.py  test_meta_pack.py  test_placement.py
(+212 files in other folders)
